kubernetes/apps/nginx-site/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-site
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`site.rubberduckops.com`)
      kind: Rule
      services:
        - name: nginx-site
          port: 80
  tls:
    secretName: site-rubberduckops-tls
